--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,22 @@ overflow-x: hidden; /* Hide horizontal scrollbar */
   border: 3px solid #6b6a6a;
   border-radius: 3px;
 }
+.btn-red {
+  color: white;
+  background-color: #db0000;
+  border: none;
+  border-radius: 3px;
+  height: 35px;
+  
+}
+.btn-red:hover,
+.btn-red:active,
+.btn-red:focus,
+.btn-red.active {
+  background-color: #db0000;
+  border: 3px solid #860000;
+}
+
 
 .wow {
   position: absolute;
@@ -147,8 +163,7 @@ overflow-x: hidden; /* Hide horizontal scrollbar */
   width: auto;
 }
 .bold{
-  font-size: 15px;
-  /* font-weight:bold; */
+  font-weight:bold;
 }
 .mini{
   height: 35px;
@@ -230,10 +245,12 @@ label {
 .mleft{
   padding-left: 200px;
 }
+
 .mrh{
-  background: #D60000;
+  background-color: #D60000;
   border-radius: 5px;
 }
+
 .w{
   width: 400px;
 }
@@ -253,4 +270,8 @@ label {
   font-size: 20px;
   line-height: 25px;
   color: #000000;
+}
+.timesNew{
+  font-family:'Times New Roman', Times, serif;
+  font-weight: bold;
 }
