--- a/src/pages/adminPage/table.css
+++ b/src/pages/adminPage/table.css
@@ -10,7 +10,7 @@
 }
 .content-table th,
 .content-table td {
-  padding: 12px 15px;
+  padding: 5px 15px;
 }
 .content-table tbody tr {
   border-bottom: 2px solid #d3d3d3;
@@ -37,7 +37,7 @@
   margin-left: 40px;
   margin-top: -45px;
 }
-.dropdown-content a {
+.dropdown-content div {
   color: black;
   padding: 10px 9px;
   height: 40px;
@@ -45,7 +45,7 @@
   display: block;
   text-align: center;
 }
-.dropdown-content a:hover {
+.dropdown-content div:hover {
   background-color: #f1f1f1;
   border-radius: 5px;
 }
@@ -54,4 +54,14 @@
 }
 .dropdown:hover .dropbtn {
   background-color: grey;
+}
+.center {
+  text-align: center;
+}
+.aksi {
+  padding: 15px 25px 15px 15px;
+  cursor: pointer;
+}
+.approve {
+  color: #0acf83;
 }
