--- a/src/pages/adminPage/dropStyles.css
+++ b/src/pages/adminPage/dropStyles.css
@@ -62,6 +62,7 @@ body {
   opacity: 1;
   visibility: visible;
   transform: translateY(0);
+  z-index: 2;
 }
 
 .menu ul {
@@ -85,4 +86,18 @@ body {
   background-color: rgba(165, 148, 146, 0.185);
   padding: 1px;
   border-radius: 3px;
+}
+
+.Overlay {
+  background-color: rgba(0, 0, 0, 0);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
+  display: none;
+}
+
+.Overlay.Show {
+  display: block;
 }
