--- a/src/App.css
+++ b/src/App.css
@@ -157,6 +157,7 @@ body {
 .cover {
   height: 500px;
   width: auto;
+  max-width: 300px;
 }
 
 .detxt {
@@ -215,7 +216,10 @@ label {
   height: 45px;
 }
 .lbook {
-  width: 200px;
+  width: 90%;
+  max-width: 200px;
+  max-height: 250px;
+  min-height: 250px;
   border-radius: 10px;
 }
 .pp {
@@ -285,9 +289,20 @@ label.fladd {
   padding: 0rem;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #f0f0f0;
-  border: 2px;
   border-radius: 0.3rem;
   cursor: pointer;
+  margin-top: 1rem;
+  font-size: 16px;
+}
+label.coverBtn {
+  width: 220px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #ececec;
+  color: #686868;
+  height: 50px;
+  border: 4px solid #b9b8b8;
+  padding: 10px;
+  padding-left: 35px;
   margin-top: 1rem;
   font-size: 16px;
 }
@@ -331,4 +346,13 @@ label.fladd {
 .Modalsub.Show {
   top: 20%;
   z-index: 20;
+}
+
+.preview2 {
+  width: 300px;
+  height: auto;
+}
+.profilPic {
+  width: 300px;
+  height: 250px;
 }
